add test to extract first batch of restaurants in NYC from yelp business details endpoint